--- a/charts/hyperflow-engine/templates/crb.yml
+++ b/charts/hyperflow-engine/templates/crb.yml
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   creationTimestamp: null
-  name: serviceaccounts-cluster-admin
+  name: serviceaccounts-cluster-admin-{{.Release.Name}}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
